wordpress_service.yml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: ingress-nginx
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress  
  ports: 
    - protocol: TCP
      port: 80
      targetPort: 80 
  type: ClusterIP
