ingress1.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  namespace: shir
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx-shir
  rules:
  - host: aee750e7560244a86894ef72f4630b41-1834286964.us-east-1.elb.amazonaws.com
    http:
      paths:
      - path: /(grafana|login)(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: shir-kube-stack-grafana
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              number: 80
